# strands-agents-starter

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.cursor/rules/: python-coding-standards.mdc  technical-writer.mdc
examples/: README.md  __init__.py  multi_agent_example.py  research_workflow.py
src/strands_agents_starter/: cli.py
src/strands_agents_starter/api/: cli.py
src/strands_agents_starter/application/dto/: message.py
src/strands_agents_starter/application/services/: agent_service.py  workflow_service.py
src/strands_agents_starter/domain/entities/: twin.py
src/strands_agents_starter/infra/config/: app_config.py
